--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,14 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Get latest release from repo
-      id: last_release
-      uses: InsonusK/get-latest-release@v1.0.1
-      with:
-        view_top: 1
     
     - name: Build the Docker image
-      run: docker build --file Dockerfile -t miniatureseal/dockerfile-practice:latest -t miniatureseal/dockerfile-practice:${{ steps.last_release.outputs.name }} .
+      run: docker build --file Dockerfile -t miniatureseal/dockerfile-practice:latest .
       
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
